# EmpiricalErrorAnalysis

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  run-batch.sh
ext/: CMakeLists.txt
matlab/: CollectConvData.m  GenIntegStruct.m  GenSamplStruct.m  PlotConvData.m  cells1.m
python/: anim-killeroos-orig.pbrt  pbrt-cl.py  volume-caustic.pbrt
src/analyzer/: Analyzer.cpp  Analyzer.h  FourierAnalyzer.cpp  FourierAnalyzer.h  MSEAnalyzer.cpp  MSEAnalyzer.h  PointAnalyzer.cpp  PointAnalyzer.h  VarianceAnalyzer.cpp  VarianceAnalyzer.h
src/core/: cmdlnparser.cpp  cmdlnparser.h  common.cpp  common.h  point2d.h  read-image.cpp  read-image.h  write-exr.cpp  write-exr.h
src/integrand/: DiskIntegrand.cpp  DiskIntegrand.h  GaussianIntegrand.cpp  GaussianIntegrand.h  PBRTIntegrand.cpp  PBRTIntegrand.h  PWConstIntegrand.cpp  PWConstIntegrand.h  QPIntegrand.cpp  QPIntegrand.h  integrand.cpp  integrand.h
src/main/: main.cxx
src/sampler/: sampler.cpp  sampler.h
